--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 pathlib
 python-dotenv
-PyJWT
-Flask-SQLAlchemy
+Flask==2.1.3
+Flask-SQLAlchemy==2.5.1
 Flask-Migrate
-flask-bcrypt
 mysqlclient
+pymysql
+flask_validator
+werkzeug==2.1.2
+sqlalchemy<2.0
