--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 CONFIG_MODE = development
 
 # POSTGRESQL_DATABASE_URI => 'postgresql+psycopg2://user:password@host:port/database'
-DEVELOPMENT_DATABASE_URL = 'mysql+pymysql://root:thilina@localhost:3306/inventory2'
+DEVELOPMENT_DATABASE_URL = 'mssql+pyodbc://sa:qwe123@DESKTOP-QF7OOTB/inventorynew?driver=ODBC+Driver+17+for+SQL+Server'
 TEST_DATABASE_URL        =
 STAGING_DATABASE_URL     =
 PRODUCTION_DATABASE_URL  =
