--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,7 @@ python-dotenv
 Flask==2.1.3
 Flask-SQLAlchemy==2.5.1
 Flask-Migrate
-mysqlclient
-pymysql
+pyodbc
 flask_validator
 werkzeug==2.1.2
 sqlalchemy<2.0
